# Can_Circularity_Analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scales/: ppmm_100.json  ppmm_120.json  ppmm_40.json  ppmm_60.json  ppmm_80.json
src/can_circularity_analysis/: __init__.py  can_circularity.py  summarize_can_metrics.py  summerize.py
src/can_circularity_analysis/cli/: __init__.py  analyze.py  reconstruct.py  summarize.py
src/can_circularity_analysis/core/: __init__.py  calibration.py  detection.py  metrics.py  reconstruction.py  visualization.py
src/can_circularity_analysis/utils/: __init__.py  file_io.py  image_processing.py
tests/: test_import.py
